# savh_gnn

./: .gitignore  KAGGLE_GUIDE.md  Kaggle_Setup_Training.ipynb  QUICK_START.md  README.md  SETUP_CHECKLIST.md  SETUP_COMPLETE_SUMMARY.md  arborescence_ASTA_20260123_001818.txt  asta.txt  directory.py
Projet_Panacee/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  FIX_DEEPCHEM_WINDOWS.md  GPU_INSTALL_GUIDE_FINAL.py  GUIDE_VALIDATION_ACADEMIQUE.md  INDEX_PHASE2_FINAL.py  INSTALL_CUDA_PYTORCH_QUADROM1000M.py  KAGGLE_TRAINING_GUIDE.md  MANUEL_VIH.md  OPTIMISATION_ACADEMIQUE_COMPLETE.md  README.md  academic_workflow_example.py  auto_install_pytorch_cuda.py  check_gpu_and_models.py  install_pytorch_gpu_direct.py  phase2_status_report.py  predict_molecules.py  pyproject.toml  requirements.txt  run_phase1.py  run_phase2.py  run_phase2_guided.py  run_phase3.py  run_pipeline.py  test_all_imports.py  test_deepchem_import.py  validate_cuda_install.py  visualize_phase1.py
Projet_Panacee/dashboard/: README.md  app.py  data_io.py  requirements.txt
Projet_Panacee/models/: versions.json
Projet_Panacee/notebooks/: kaggle_phase1.ipynb  kaggle_phase2.ipynb  kaggle_phase3.ipynb
Projet_Panacee/results/: Panacee_V3_Academic_Validation.md
Projet_Panacee/src/: config.py
Projet_Panacee/tests/: conftest.py  test_academic_validation.py  test_api.py  test_bugfixes.py  test_catalog.py  test_clinical_metrics.py  test_data_integrity.py  test_enhanced_modules.py  test_load.py  test_lr_scaling.py  test_metrics_edges.py  test_multigpu_phase1.py  test_pretrain_mgm.py  test_safe_load.py  test_safety.py  test_service.py  test_smoke.py  test_uncertainty.py  test_webapp.py
Projet_Panacee/webapp/: README.md  run.py  (+11 more)
(+50 files in other folders)
