[project]
name = "panacee"
version = "3.0.0"
description = "Découverte de médicaments in silico (GNN) : toxicité, efficacité anti-VIH, criblage virtuel + tableau de bord temps réel."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Dépendances installées séparément (PyTorch via index dédié, cf. requirements.txt).
# Ce bloc documente le cœur ; il ne remplace pas requirements.txt pour l'install GPU.
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "rdkit>=2023.3.1",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
web = ["starlette>=0.40", "uvicorn>=0.30"]
chat = ["anthropic>=0.40"]
dev = ["ruff", "pytest", "httpx>=0.27"]

[tool.ruff]
line-length = 100
target-version = "py310"
# Dossiers non pertinents pour le lint
extend-exclude = [".venv", "archives", "scripts", "plots", "results", "docs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E402",  # imports après le bootstrap sys.path (nécessaire : exécution hors-package)
    "E501",  # longueur de ligne (code scientifique : formules, longues chaînes)
    "E741",  # noms à une lettre (l, I) usuels en notation mathématique
    "E702",  # plusieurs instructions séparées par ';' (scripts de recherche)
]

[tool.ruff.lint.per-file-ignores]
# Scripts d'exemple : variables d'illustration parfois inutilisées
"academic_workflow_example.py" = ["F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
